Senior_Project/src/senior/project/test/server/errors/ServerInvalidTimeException.java
package senior.project.test.server.errors;

/**
 *
 * @author Paul Jones
 */
public class ServerInvalidTimeException extends Exception {

  public ServerInvalidTimeException(String msg) {
    super(msg);
  }
}
